(lang dune 3.16)

(name SAT_Solver)

(generate_opam_files true)

(source
 (github DanielBrv/SAT_Solver))

(authors "Daniel")

(license LICENSE)


(package
 (name SAT_Solver)
 (synopsis "A primitive SAT solver")
 (description "")
 (depends ocaml dune)
 )

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
